# packer-tutorial

./: CMakeLists.txt  README.md
dummy/: CMakeLists.txt
dummy/src/: main.cpp
src/: main.cpp  resource.hpp  resource.rc
stub/: CMakeLists.txt
stub/src/: main.cpp
